--- a/views/elements/navbar-header.ejs
+++ b/views/elements/navbar-header.ejs
@@ -5,5 +5,5 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/<%= systemConfig.prefixAdmin%>">NodeJS Training </a>
+    <a class="navbar-brand" href="">NodeJS Training </a>
 </div>
