--- a/views/pages/items/list.ejs
+++ b/views/pages/items/list.ejs
@@ -1,131 +1,112 @@
-<div class="alert alert-success" role="alert">
-    <span class="close-btn">&times;</span>
-    Thay đổi Status thành công
-</div>
+<%- include ('./../../helpers/filter-status') %>
+    <%- include('./../../helpers/status')%>
+        <%- include('./../../helpers/action')%>
+            <%- include('./../../helpers/pagination')%>
 
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-info">
-            <div class="panel-heading">
-                Search & Filter
-                <a href="<%= systemConfig.prefixAdmin%>/items">
-                    <span id="icon-reload" class="glyphicon glyphicon-refresh"></span>
-                </a>
-            </div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="status-list col-sm-6 pl0">
-                        <%- include ('./../../helpers/filter-status') %>
-                            <%- filterStatusHelper(statusFilter,keyWordSearch) %>
-                    </div>
-                    <div class="col-sm-6">
-                        <form action="<%= systemConfig.prefixAdmin%>/items/status/<%= currentStatus%>" method="GET">
-                            <div class="input-group">
-                                <input type="text" class="form-control" name="keyWordSearch" placeholder="Search for..."
-                                    value="<%= keyWordSearch%>">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-info" type="submit">Search</button>
-                                </span>
-                                <span class="input-group-btn">
-                                    <button class="btn btn-success" type="button"><a
-                                            href="<%= systemConfig.prefixAdmin%>/items/status/<%= currentStatus%>">Clear</a></button>
-                                </span>
-                            </div>
-                        </form>
-                    </div>
+                <div class="alert alert-success" role="alert">
+                    <span class="close-btn">&times;</span>
+                    Thay đổi Status thành công
                 </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="col-lg-12">
-        <div class="panel panel-info">
-            <div class="panel-heading">
-                List Items
-            </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-                <form role="form" class="form-inline zt-form" id="zt-form" action="" method="post">
-                    <div class="zcontrols">
-                        <select name="action" class="form-control slbAction">
-                            <option value="">Bulk Action</option>
-                            <option value="<%= systemConfig.prefixAdmin%>/items/change-status/active">
-                                Active
-                            </option>
-                            <option value="<%= systemConfig.prefixAdmin%>/items/change-status/inactive">
-                                InActive
-                            </option>
-                            <option value="<%= systemConfig.prefixAdmin%>/items/save-ordering/">
-                                Change Ordering
-                            </option>
-                            <option value="<%= systemConfig.prefixAdmin%>/items/delete/">
-                                Delete
-                            </option>
-                        </select>
-
-                        <button class="btn btn-info btnAction" type="button" id="btn-action" value="btnAction"
-                            disabled>Apply</button>
-
-                        <div class="pull-right">
-                            <a href="<%= systemConfig.prefixAdmin%>/items/add" class="btn btn-warning btn-addNew">Add
-                                New</a>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-info">
+                            <div class="panel-heading">
+                                Search & Filter
+                                <a href="<%= systemConfig.prefixAdmin%>/items">
+                                    <span id="icon-reload" class="glyphicon glyphicon-refresh"></span>
+                                </a>
+                            </div>
+                            <div class="panel-body">
+                                <div class="row">
+                                    <div class="status-list col-sm-6 pl0">
+                                        <%- filterStatusHelper('items',statusFilter,keyWordSearch) %>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <form action="<%= systemConfig.prefixAdmin%>/items/status/<%= currentStatus%>"
+                                            method="GET">
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" name="keyWordSearch"
+                                                    placeholder="Search for..." value="<%= keyWordSearch%>">
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-info" type="submit">Search</button>
+                                                </span>
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-success" type="button"><a
+                                                            href="<%= systemConfig.prefixAdmin%>/items/status/<%= currentStatus%>">Clear</a></button>
+                                                </span>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="table-responsive">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>
-                                        <input type="checkbox" class="cbAll" />
-                                    </th>
-                                    <th>#</th>
-                                    <th>Name</th>
-                                    <th>Status</th>
-                                    <!-- <th width="30%">Content</th> -->
-                                    <th>Ordering</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <%- include('./../../helpers/status')%>
-                                    <% items.forEach(function(item,index) { %>
-                                        <tr>
-                                            <td>
-                                                <input type="checkbox" name="cid" value="<%= item._id %>" />
-                                            </td>
-                                            <td>
-                                                <%= index+1%>
-                                            </td>
-                                            <td>
-                                                <%= item.name%>
-                                            </td>
-                                            <td>
-                                                <%-
-                                                    statusHelper(item.status,item._id,pagination.currentPage,currentStatus)%>
-                                            </td>
-                                            <td>
-                                                <input type="number" value="<%=item.ordering%>"
-                                                    class="text-center ordering">
-                                            </td>
-                                            <td>
-                                                <a href="<%= systemConfig.prefixAdmin%>/item/form/5a9e5a96da67bc078421d7d6"
-                                                    type="button" class="btn btn-warning btn-sm">Edit</a>
-                                                <a href="<%= systemConfig.prefixAdmin%>/items/delete/<%= item._id%>/<%= currentStatus%>?page=<%= pagination.currentPage%>"
-                                                    type="button" class="btn btn-danger btn-sm btn-delete">Delete</a>
-                                            </td>
-                                        </tr>
-                                        <% }) %>
-                            </tbody>
-                        </table>
+                    <div class="col-lg-12">
+                        <div class="panel panel-info">
+                            <div class="panel-heading">
+                                List Items
+                            </div>
+                            <!-- /.panel-heading -->
+                            <div class="panel-body">
+                                <form role="form" class="form-inline zt-form" id="zt-form" action="" method="post">
+                                    <%- actionHelper('items') %>
+                                        <div class="table-responsive">
+                                            <table class="table table-striped">
+                                                <thead>
+                                                    <tr>
+                                                        <th>
+                                                            <input type="checkbox" class="cbAll" />
+                                                        </th>
+                                                        <th>#</th>
+                                                        <th>Name</th>
+                                                        <th>Status</th>
+                                                        <!-- <th width="30%">Content</th> -->
+                                                        <th>Ordering</th>
+                                                        <th>Action</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <% items.forEach(function(item,index) { %>
+                                                        <tr>
+                                                            <td>
+                                                                <input type="checkbox" name="cid"
+                                                                    value="<%= item._id %>" />
+                                                            </td>
+                                                            <td>
+                                                                <%= index+1%>
+                                                            </td>
+                                                            <td>
+                                                                <%= item.name%>
+                                                            </td>
+                                                            <td>
+                                                                <%-
+                                                                    statusHelper(item.status,item._id,pagination.currentPage,currentStatus)%>
+                                                            </td>
+                                                            <td>
+                                                                <input type="number" value="<%=item.ordering%>"
+                                                                    class="text-center ordering">
+                                                            </td>
+                                                            <td>
+                                                                <a href="<%= systemConfig.prefixAdmin%>/item/form/5a9e5a96da67bc078421d7d6"
+                                                                    type="button"
+                                                                    class="btn btn-warning btn-sm">Edit</a>
+                                                                <a href="<%= systemConfig.prefixAdmin%>/items/delete/<%= item._id%>/<%= currentStatus%>?page=<%= pagination.currentPage%>"
+                                                                    type="button"
+                                                                    class="btn btn-danger btn-sm btn-delete">Delete</a>
+                                                            </td>
+                                                        </tr>
+                                                        <% }) %>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                </form>
+                            </div>
+                        </div>
                     </div>
-                </form>
-            </div>
-        </div>
-    </div>
 
-    <div class="col-lg-12">
-        <%- include('./../../helpers/pagination')%>
-            <%- paginationHelper(pagination,currentStatus,keyWordSearch)%>
-    </div>
-</div>
+                    <div class="col-lg-12">
+                        <%- paginationHelper(pagination,currentStatus,keyWordSearch)%>
+                    </div>
+                </div>
