--- a/views/helpers/action.ejs
+++ b/views/helpers/action.ejs
@@ -7,7 +7,7 @@
     { value: "delete/", name: "Delete" },
     ];
     let xhtmlAction = '';
-    let linkAddNew = systemConfig.prefixAdmin + '/' + collection + '/add' ;
+    let linkAddNew = systemConfig.prefixAdmin + '/' + collection + '/form' ;
 
     actions.forEach((action)=> {
     let link = systemConfig.prefixAdmin + '/' + collection + '/' + action.value;
