--- a/views/pages/items/list.ejs
+++ b/views/pages/items/list.ejs
@@ -9,6 +9,7 @@
                         <%= message[0]%>
                     </div>
                     <% } %>
+
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="panel panel-info">
@@ -92,7 +93,7 @@
                                                                             class="text-center ordering">
                                                                     </td>
                                                                     <td>
-                                                                        <a href="<%= systemConfig.prefixAdmin%>/item/form/5a9e5a96da67bc078421d7d6"
+                                                                        <a href="<%= systemConfig.prefixAdmin%>/items/form/<%= item._id %>"
                                                                             type="button"
                                                                             class="btn btn-warning btn-sm">Edit</a>
                                                                         <a href="<%= systemConfig.prefixAdmin%>/items/delete/<%= item._id%>/<%= currentStatus%>?page=<%= pagination.currentPage%>"
