--- a/mapp/views/backend/helpers/item-action.ejs
+++ b/mapp/views/backend/helpers/item-action.ejs
@@ -2,5 +2,5 @@
     const ad = systemConfig.prefixAdmin;
 
     return `<a href="/${ad}/${collection}/form/${id}" type="button" class="btn btn-sm btn-warning">Edit</a>
-    <a href="javascript: deleteConfirm('${ad}','${id}')" type="button" class="btn btn-danger btn-sm">Delete</a>`
+    <a href="javascript: deleteConfirm('${ad}','${id}','${collection}')" type="button" class="btn btn-danger btn-sm">Delete</a>`
     }%>
