--- a/mapp/views/backend/pages/groups/form.ejs
+++ b/mapp/views/backend/pages/groups/form.ejs
@@ -9,7 +9,7 @@
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
-                    <form role="form" action="/<%= ad%>/items/save" method="post" enctype="multipart/form-data">
+                    <form role="form" action="/<%= ad%>/groups/save" method="post" enctype="multipart/form-data">
 
                         <div class="card-body">
                             <!-- Err notify -->
@@ -83,7 +83,7 @@
                         <div class="card-footer">
                             <div class="float-right">
                                 <button type="submit" class="btn btn-primary ">Submit</button>
-                                <a type="button" href="/<%= ad%>/items" class="btn btn-default">Cancel</a>
+                                <a type="button" href="/<%= ad%>/groups" class="btn btn-default">Cancel</a>
                             </div>
                         </div>
 
