--- a/mapp/views/backend/pages/items/list.ejs
+++ b/mapp/views/backend/pages/items/list.ejs
@@ -67,7 +67,7 @@
 
                     <div class="card-body">
                         <form class=" zt-form" id="zt-form" action="" method="post">
-                            <%- actionHelper() %>
+                            <%- actionHelper(collection) %>
 
                             <div>
                                 <table class="table table-bordered">
